syntax = "proto3";

package vertis.validation.test;

option java_package = "ru.yandex.vertis.protobuf.test";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "options.proto";
import "validation.proto";

message SimpleMessage {
    string id = 1;
    string name = 2 [(is_optional) = true];
    string value = 3 [(is_optional) = false];
}

message WithNested {
    string id = 1;
    string name = 2 [(is_optional) = true];
    SimpleMessage simple = 3;
}

message WithBool {
    bool some = 1;
    google.protobuf.BoolValue some_wrapper = 2;
}

message WithNestedOneOf {
    string id = 1;
    string name = 2 [(is_optional) = true];
    WithOneOf message = 3;
}

message WithRepeated {
    string id = 1;
    repeated SimpleMessage msgs = 2;
    repeated SimpleMessage option_msgs = 3 [(is_optional) = true];
}

enum TestEnum {
    TEST_UNKNOWN = 0;
    TEST_OK = 1;
}

message WithEnum {
    TestEnum enu = 1;
    SimpleMessage simple = 2 [(is_optional) = true];
}

message WithOneOf {
    oneof payload {
        string id = 1;
        SimpleMessage simple = 2;
        string name = 3 [(is_optional) = true];
    }

    string value = 4 [(is_optional) = true];
}

message WithOptionalOneOf {
    oneof payload {
        option (is_oneof_optional) = true;
        string id = 1;
        SimpleMessage simple = 2;
        string name = 3 [(is_optional) = true];
    }

    string value = 4 [(is_optional) = true];
}

message OptFields {
    string id = 1 [(is_optional) = true];
    string name = 2 [(is_optional) = true];
}

message WithFieldsOpt {
    OptFields opt = 1;
}

message ComplexMessage {
    string id = 1;
    string name = 2;
    OptFields opt = 3;
    WithOneOf oneOfField = 4;
    TestEnum enu = 5;
    SimpleMessage simple = 6;

    SimpleMessage simple_opt = 7[(is_optional) = true];
    string opt_field = 8 [(is_optional) = true];
}

message WithIgnoreInnerFields {
    string id = 1;
    string name = 2[(ignore_inner_fields) = true];
    SimpleMessage ignore_inner = 3[(ignore_inner_fields) = true];
    SimpleMessage not_ignore_inner = 4[(ignore_inner_fields) = false];
}
