syntax = "proto2";
package test_case_for_infer_schema;

// Imports needed for schema annotations to work.
import "infra/awacs/vendor/awacs/tests/test_lib_rpc/proto/test_awacs_field_schema.proto";
import "infra/awacs/vendor/awacs/tests/test_lib_rpc/proto/test_awacs_message_schema.proto";


message EmbeddedTest {
    option (test_awacs_message_schema.title) = "EmbeddedTest";

    optional int32 int_field = 1 [default = 0,
                                    (test_awacs_field_schema.minimum) = -100,
                                    (test_awacs_field_schema.maximum) = 1000,
                                    (test_awacs_field_schema.title) = "This is int field"];
    optional int64 int64_field = 2;
    optional float float_field = 3;
    optional string string_field = 4 [default = "Default value"];
    optional bool bool_field = 5;
    repeated int32 repeated_field = 6;
}


message Test {
    option (test_awacs_message_schema.title) = "Test";
    option (test_awacs_message_schema.description) = "Description";

    optional int32 int_field = 1 [default = 0, (test_awacs_field_schema.minimum) = 100, (test_awacs_field_schema.maximum) = 500];
    optional float float_field = 2;
    optional string string_field = 3;
    optional bool bool_field = 4;
    repeated int32 repeated_field = 5;
    optional EmbeddedTest message_field = 6;
}
